# captura-deploy

./: .gitignore  Pulumi.yaml  README.md  __main__.py  build-info.test.yaml  build-info.yaml  builder.test.yaml  builder.yaml  logging.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg
assets/: error-pages.yaml
assets/experiments/: whoami.yaml
assets/experiments/registry/: README.rst  docker-compose.yaml  openssl.sh
assets/helm/: registry-values.yaml  traefik-values.yaml
assets/helpers/: build-info.local.yaml  py.yaml
captura_pulumi/: __main__.py  k8s.py  linode.py  main.py  util.py
docker/: dockerfile
src/captura_pipelines/: __init__.py  __main__.py  builder.py  config.py  flags.py
src/captura_pulumi/: __init__.py  k8s.py  linode.py  porkbun.py  util.py
tests/: config.py  conftest.py  test_config.py  test_k8s.py
