[metadata]
authors =
	Adrian Cederberg
name = captura_pulumi
version = 0.0.0
description = Deploy a ``captura`` app to linode."
long_description = file: README.rst
keywords = api, markdown, rst, reStructured, text
liscense = LICENSE



[options]
packages = find:

[options.packages.find]
include = 
  captura_pulumi*

